# Prediction_Market_Insight

./: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: streamlit_app.py
scripts/: init_db.py  refresh_market_catalog.py  run_app.ps1  run_tests.ps1  search_catalog.py  setup_windows.ps1  show_history.py  smoke_context.py  smoke_forecast.py  smoke_kalshi.py  smoke_polymarket.py
src/pmi_agent/: __init__.py  config.py  schemas.py
src/pmi_agent/clients/: __init__.py  base.py  kalshi_client.py  polymarket_client.py
src/pmi_agent/context/: __init__.py  news_context.py
src/pmi_agent/engine/: __init__.py  aggregation_engine.py  confidence_engine.py  probability_engine.py  provider_comparison.py
src/pmi_agent/interpretation/: __init__.py  query_interpreter.py  search_term_expander.py
src/pmi_agent/reporting/: __init__.py  report_generator.py
src/pmi_agent/search/: __init__.py  market_catalog.py  market_search.py  relevance_ranker.py  semantic_similarity.py
src/pmi_agent/storage/: __init__.py  db.py
tests/: conftest.py  test_aggregation_engine.py  test_confidence_engine.py  test_imports.py  test_kalshi_client.py  test_market_catalog.py  test_news_context.py  test_polymarket_client.py  test_probability_engine.py  test_provider_comparison.py  test_query_interpreter.py  test_relevance_ranker.py  test_report_generator.py  test_search_term_expander.py  test_semantic_similarity.py  test_storage.py
