[project]
name = "prediction-market-intelligence-agent"
version = "0.1.0"
description = "Streamlit dashboard for deterministic market-implied forecasting from prediction markets."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
